--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <!--logo-->
         <figure>
             <img src="images/logostarwars.png">
-            <h2>API</h2>
+            <h2>api</h2>
             <h2>--</h2>
-            <h2>Home</h2>
+            <h2>home</h2>
         </figure>
         <!--fin logo-->
         <!--Navigation-->
