--- a/pages/planets.html
+++ b/pages/planets.html
@@ -15,9 +15,9 @@
     <!--Logo-->
     <figure>
         <img src="../images/logostarwars.png">
-        <h2>API</h2>
+        <h2>api</h2>
         <h2>--</h2>
-        <h2>Planets</h2>
+        <h2>planets page</h2>
     </figure>
     <!--fin logo-->
     <section class="container-fluid">
@@ -32,15 +32,15 @@
     <!--Tableau-->
     <section class="container-fluid">
         <div class="row">
-            <div class="col-sm-10"> Planet's Name </div>
+            <div class="col-12"> Planet's Name </div>
         </div>
     </section>
     <section class="container-fluid" id="tableau">
     </section>
-    <div>
-        <button type="button" class='btn btn-dark' id="previous">Previous</button>
-        <button type="button" class='btn btn-dark' id="next">Next</button>
-    </div>
+        <div id="divButtons">
+            <button type="button" class='btn btn-dark' id="previous">Previous</button>
+            <button type="button" class='btn btn-dark' id="next">Next</button>
+        </div>
     <!--fin-Tableau-->
 
     <!--Modal-->
@@ -54,15 +54,15 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modalBody">
-                    <p>Name</p>
+                    <p>Name :</p>
                     <div id="name"></div>
-                    <p>Rotation Period</p>
+                    <p>Rotation Period :</p>
                     <div id="rotation_period"></div>
-                    <p>Orbital Period</p>
+                    <p>Orbital Period :</p>
                     <div id="orbital_period"></div>
-                    <p>Diameter</p>
+                    <p>Diameter :</p>
                     <div id="diameter"></div>
-                    <p>Famous Resident(s)</p>
+                    <p>Famous Resident(s) :</p>
                     <div id="residents"></div>
                 </div>
                 <div class="modal-footer">
