--- a/pages/search.html
+++ b/pages/search.html
@@ -15,9 +15,9 @@
     <!--logo-->
     <figure>
         <img src="../images/logostarwars.png">
-        <h2>API</h2>
+        <h2>api</h2>
         <h2>--</h2>
-        <h2>Search</h2>
+        <h2>search page</h2>
     </figure>
     <!--fin logo -->
     <!--Navigation-->
@@ -29,16 +29,20 @@
         </div>
     </section>
     <!--fin-Navigation-->
-    <button type='button' class='btn btn-dark' data-toggle='modal' data-target='#modal'>Rechercher</button>
-    <section id="liste">
+
+    <!--Gestion contenu-->
+    <section class="container-fluid" id="tableau">
 
     </section>
+    <div id="divButtons">
+        <button type='button' class='btn btn-dark' data-toggle='modal' data-target='#modal'>Search</button>
+    </div>
+    <!--fin gestion contenu-->
     <!--Modal-->
     <div class="modal" tabindex="-1" role="dialog" id="modal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Search</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
