--- a/pages/characters.html
+++ b/pages/characters.html
@@ -14,9 +14,9 @@
     <!--Logo-->
     <figure>
         <img src="../images/logostarwars.png">
-        <h2>API</h2>
+        <h2>api</h2>
         <h2>--</h2>
-        <h2>Characters</h2>
+        <h2>characters page</h2>
     </figure>
     <!--fin-Logo-->
     <section class="container-fluid">
@@ -30,12 +30,12 @@
     <!--Tableau-->
     <section class="container-fluid">
         <div class="row">
-            <div class="col-sm-4"> Character's name </div>
+            <div class="col-12"> Character's name </div>
         </div>
     </section>
     <section class="container-fluid" id="tableau">
     </section>
-    <div>
+    <div id="divButtons">
         <button type="button" class='btn btn-dark' id="previous">Previous</button>
         <button type="button" class='btn btn-dark' id="next">Next</button>
     </div>
@@ -52,13 +52,13 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modalBody">
-                    <p>Name</p>
+                    <p>Name :</p>
                     <div id="name"></div>
-                    <p>Height</p>
+                    <p>Height :</p>
                     <div id="height"></div>
-                    <p>Mass</p>
+                    <p>Mass :</p>
                     <div id="mass"></div>
-                    <p>Gender</p>
+                    <p>Gender :</p>
                     <div id="gender"></div>
                 </div>
                 <div class="modal-footer">
